--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
                 Lorem ipsum dolor sit amet.
             </p>
             <br><br>
-            <button class="team-btn">
-                Ekibimiz Hakkında
-            </button>
+
+            <a class="takım" href="#team">Ekibimiz Hakkında</a>
         </div>
     </div>
 
